--- a/src/ProductList/Product/Product.css
+++ b/src/ProductList/Product/Product.css
@@ -3,3 +3,19 @@ table, tr, td {
     border-collapse: collapse;
     padding: 10px;
 }
+.productList{
+    max-width: 700px;
+    margin: 0 auto;
+}
+.productList table{
+    width: 100%;
+}
+.productList table td input {
+    border: 0;
+    outline: 0;
+    font-size: 1rem;
+    text-align: center;
+    width: auto;
+    margin: 0;
+    padding: 0;
+}
