--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
+* {
+    box-sizing: border-box;
+}
 .App {
-  text-align: center;
+    text-align: center;
+    background: #28353E;
+    color: #f1fefe;
+    min-height: 100vh;
+    padding-bottom: 30px;
+}
+.nav {
+    background: #364652;
+}
+.nav a {
+    display: inline-block;
+    padding: 10px;
+    color: #C4FDFC;
+    text-decoration: none;
+}
+.nav a:hover {
+    color: #14F5F1;
+}
+input {
+    background: #f1fefe;
+    border: 0;
+    border-radius: 30px;
+    outline: 0;
+    padding: 5px;
+    text-align: center;
+    color: #28353E;
+}
+select{
+    border: 0;
+    border-radius: 30px;
+    outline: 0;
+    padding: 5px;
+    text-align: center;
+    background: #364652;
+    color: #C4FDFC;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.functionBar {
+    margin: 0 auto;
+    height: 30vh;
+    max-height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 30%;
+}
+.wrapper > input, .wrapper > select {
+    display: inline-block;
+    width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+    display: inline-block;
+    padding: 5px 10px;
+    border-radius: 30px;
+    border: 0;
+    outline: 0;
+    background: #364652;
+    color: #C4FDFC;
 }
